вносит первую часть правок

--- a/source/form.html
+++ b/source/form.html
@@ -123,7 +123,7 @@
     <div class="before-text-block">
       <h2 class="visually-hidden">Форма отзыва</h2>
       <p class="before-text-block__title title--large">Оставьте свой отзыв</p>
-      <p class="before-text-block__description">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещеных вами достопримечательностях</p>
+      <p class="before-text-block__description description">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещеных вами достопримечательностях</p>
     </div>
     <form class="form-feedback" action="https://echo.htmlacademy.ru/" method="post">
       <h2 class="visually-hidden">Форма отзыва</h2>
@@ -229,7 +229,8 @@
             <div class="separator-horizont"></div>
           </div>
           <legend class="visually-hidden">Опишите свои эмоции:</legend>
-          <label class="form-feedback__label"><textarea class="form-feedback__text input__input input__input--area" name="attractions" rows="5" cols="auto" placeholder="Опишите подробно все свои восторги"></textarea></label>
+          <label class="form-feedback__label visually-hidden">Ваши эмоции</label>
+            <textarea class="form-feedback__text input__input input__input--area" name="attractions" rows="5" cols="auto" placeholder="Опишите подробно все свои восторги"></textarea>
         </fieldset>
         <div class="form-feedback__block-button">
           <button class="form-feedback__button button-primary" type="submit">Оставить отзыв</button>
@@ -275,7 +276,7 @@
       </section>
       <section class="main-footer__copyright copyright">
         <h2 class="visually-hidden">Разработано в HTML Academy</h2>
-        <a class="copyright__link" href="https://htmlacademy.ru/">
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <span class="copyright__text">Разработано</span>
           <svg width="27" height="35">
             <use xlink:href="img/sprite.svg#htmlacademy-logo"></use>
