--- a/source/catalog.html
+++ b/source/catalog.html
@@ -61,7 +61,7 @@
     <section class="gallery-photo">
       <div class="gallery-photo__intro">
         <h2 class="gallery-photo__title title--large">Фото и видео</h2>
-        <p class="gallery-photo__intro-description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
+        <p class="gallery-photo__intro-description description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
       </div>
       <ul class="gallery-photo__list">
         <li class="gallery-photo__item gallery-photo--first">
@@ -79,9 +79,11 @@
               </dl>
             </div>
             <div class="gallery-photo__like">
-              <svg class="gallery-photo__like-icon" width="23" height="21">
-                <use xlink:href="img/sprite.svg#like-icon"></use>
-              </svg>
+              <button class="gallery-photo__like-button" type="button">
+                <svg class="gallery-photo__like-icon" width="23" height="21">
+                  <use xlink:href="img/sprite.svg#like-icon"></use>
+                </svg>
+              </button>
               <span class="gallery-photo__number">1350</span>
             </div>
           </div>
@@ -101,9 +103,11 @@
               </dl>
             </div>
             <div class="gallery-photo__like">
-              <svg class="gallery-photo__like-icon" width="23" height="21">
-                <use xlink:href="img/sprite.svg#like-icon"></use>
-              </svg>
+              <button class="gallery-photo__like-button" type="button">
+                <svg class="gallery-photo__like-icon" width="23" height="21">
+                  <use xlink:href="img/sprite.svg#like-icon"></use>
+                </svg>
+              </button>
               <span class="gallery-photo__number">143</span>
             </div>
           </div>
@@ -123,9 +127,11 @@
               </dl>
             </div>
             <div class="gallery-photo__like">
-              <svg class="gallery-photo__like-icon" width="23" height="21">
-                <use xlink:href="img/sprite.svg#like-icon"></use>
-              </svg>
+              <button class="gallery-photo__like-button" type="button">
+                <svg class="gallery-photo__like-icon" width="23" height="21">
+                  <use xlink:href="img/sprite.svg#like-icon"></use>
+                </svg>
+              </button>
               <span class="gallery-photo__number">96</span>
             </div>
           </div>
@@ -145,9 +151,11 @@
               </dl>
             </div>
             <div class="gallery-photo__like">
-              <svg class="gallery-photo__like-icon" width="23" height="21">
-                <use xlink:href="img/sprite.svg#like-icon"></use>
-              </svg>
+              <button class="gallery-photo__like-button" type="button">
+                <svg class="gallery-photo__like-icon" width="23" height="21">
+                  <use xlink:href="img/sprite.svg#like-icon"></use>
+                </svg>
+              </button>
               <span class="gallery-photo__number">254</span>
             </div>
           </div>
@@ -157,12 +165,14 @@
     <section class="video-block">
       <div class="video-block__wrapper">
         <h2 class="video-block__title title--large">Все еще сомневаетесь?</h2>
-        <p class="video-block__description">Смотрите видеопрезентацию и скорее за билетами пока они не подорожали в очередной раз!</p>
+        <p class="video-block__description description">Смотрите видеопрезентацию и скорее за билетами пока они не подорожали в очередной раз!</p>
       </div>
       <div class="video-block__video">
-        <svg class="video-block__triangle">
-          <polygon points="0,0 0,54 48,27"/>
-        </svg>
+        <button class="video-block__play">
+          <svg class="video-block__triangle" width="48" height="54">
+            <polygon points="0,0 0,54 48,27"/>
+          </svg>
+        </button>
         <picture>
           <source class="gallery-photo__video" media="(min-width: 1280px)" srcset="img/video-desktop.jpg", srcset="img/video-desktop@2x.jpg 2x"/>
           <source class="gallery-photo__video" media="(min-width: 768px)" srcset="img/video-tablet.jpg", srcset="img/video-tablet@2x.jpg 2x" />
@@ -209,7 +219,7 @@
       </section>
       <section class="main-footer__copyright copyright">
         <h2 class="visually-hidden">Разработано в HTML Academy</h2>
-        <a class="copyright__link" href="https://htmlacademy.ru/">
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <span class="copyright__text">Разработано</span> <svg width="27" height="35">
             <use xlink:href="img/sprite.svg#htmlacademy-logo"></use>
           </svg>
