--- a/source/form.html
+++ b/source/form.html
@@ -285,23 +285,23 @@
       </section>
     </div>
   </footer>
-  <div class="modal">
-    <div class="modal-window modal-window__1">
+  <div class="modal__1">
+    <div class="modal__window modal__window-1">
       <h2 class="visually-hidden">ошибка в заполнении формы</h2>
-      <span class="title modal-window__title">Что-то пошло не так!</span>
-      <span class="description modal-window__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</span>
-      <button class="modal-window__button button-primary" type="button">OK</button>
+      <span class="title modal__title">Что-то пошло не так!</span>
+      <span class="description modal__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</span>
+      <button class="modal__button button-primary" type="button">OK</button>
     </div>
   </div>
-  <div class="modal-2">
-    <div class="modal-true">
+  <div class="modal__2">
+    <div class="modal__true">
       <h2 class="visually-hidden">отзыв отправлен</h2>
-      <div class="modal-window__main">
-        <span class="title modal-window__title">Ваш отзыв отправлен!</span>
-        <span class="description modal-window__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</span>
+      <div class="modal__window-main">
+        <span class="title modal__title">Ваш отзыв отправлен!</span>
+        <span class="description modal__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</span>
       </div>
-      <div class="modal-window__button-block">
-        <button class="modal-window__button button-primary" type="button">Закрыть окно</button>
+      <div class="modal__button-block">
+        <button class="modal__button button-primary" type="button">Закрыть окно</button>
       </div>
     </div>
   </div>
