--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,7 +11,7 @@
 <body class="page__body">
   <header class="main-header">
     <div class="main-header__wrapper">
-      <a class="main-header__logo">
+      <a class="main-header__logo" href="index.html">
         <svg width="185" height="96">
           <use xlink:href="img/sprite.svg#main-logo"></use>
         </svg>
@@ -31,11 +31,11 @@
             <a class="link main-nav-link main-nav-link--active" href="#">Фото и видео</a>
           </li>
           <li class="main-nav__item main-nav__item-logo">
-            <div class="main-header__logo-s">
+            <a class="main-header__logo-s" href="index.html">
               <svg width="185" height="96">
                 <use xlink:href="img/sprite.svg#main-logo"></use>
               </svg>
-            </div>
+            </a href="index.html">
           </li>
           <li class="main-nav__item">
             <a class="link main-nav-link" href="form.html">Форма отзыва</a>
@@ -60,14 +60,17 @@
     </div>
     <section class="gallery-photo">
       <div class="gallery-photo__intro">
-        <h2 class="gallery-photo__title title--large">Фото и видео</h2>
+        <h2 class="gallery-photo__title title__large">Фото и видео</h2>
         <p class="gallery-photo__intro-description description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
       </div>
       <ul class="gallery-photo__list">
-        <li class="gallery-photo__item gallery-photo--first">
+        <li class="gallery-photo__item">
           <picture>
-            <source class="gallery-photo__image" media="(min-width: 1280px)" srcset="img/photo-1-desktop.jpg", srcset="img/photo-1-desktop@2x.jpg 2x"/>
-            <source class="gallery-photo__image" media="(min-width: 768px)" srcset="img/photo-1-tablet.jpg", srcset="img/photo-1-tablet@2x.jpg 2x"/>
+            <source class="gallery-photo__image--1280-2x" type="image/webp" media="(min-width: 1280px)" srcset="img/photo-1-desktop.webp, img/photo-1-desktop@2x.webp 2x"/>
+            <source class="gallery-photo__image--768-2x" type="image/webp" media="(min-width: 768px)" srcset="img/photo-1-tablet.webp, img/photo-1-tablet@2x.webp 2x"/>
+            <source class="gallery-photo__image--320-2x" type="image/webp" srcset="img/photo-1-mobile.webp, img/photo-1-mobile@2x.webp 2x"/>
+            <source class="gallery-photo__image--1280" media="(min-width: 1280px)" srcset="img/photo-1-desktop.jpg", srcset="img/photo-1-desktop@2x.jpg 2x"/>
+            <source class="gallery-photo__image--768" media="(min-width: 768px)" srcset="img/photo-1-tablet.jpg", srcset="img/photo-1-tablet@2x.jpg 2x"/>
             <img class="gallery-photo__image" src="img/photo-1-mobile.jpg" width="280" height="280" srcset="img/photo-1-mobile@2x.jpg 2x" alt="Вид на улицу города Седона, здание с флагами, деревья и горы на заднем плане" />
           </picture>
           <div class="gallery-photo__data">
@@ -88,10 +91,13 @@
             </div>
           </div>
         </li>
-        <li class="gallery-photo__item gallery-photo__item--two">
+        <li class="gallery-photo__item">
           <picture>
-            <source class="gallery-photo__image" media="(min-width: 1280px)" srcset="img/photo-2-desktop.jpg", srcset="img/photo-2-desktop@2x.jpg 2x"/>
-            <source class="gallery-photo__image" media="(min-width: 768px)" srcset="img/photo-2-tablet.jpg", srcset="img/photo-2-tablet@2x.jpg 2x"/>
+            <source class="gallery-photo__image--1280-2x" type="image/webp" media="(min-width: 1280px)" srcset="img/photo-2-desktop.webp, img/photo-2-desktop@2x.webp 2x"/>
+            <source class="gallery-photo__image--768-2x" type="image/webp" media="(min-width: 768px)" srcset="img/photo-2-tablet.webp, img/photo-2-tablet@2x.webp 2x"/>
+            <source class="gallery-photo__image--320-2x" type="image/webp" srcset="img/photo-2-mobile.webp, img/photo-2-mobile@2x.webp 2x"/>
+            <source class="gallery-photo__image--1280" media="(min-width: 1280px)" srcset="img/photo-2-desktop.jpg", srcset="img/photo-2-desktop@2x.jpg 2x"/>
+            <source class="gallery-photo__image--768" media="(min-width: 768px)" srcset="img/photo-2-tablet.jpg", srcset="img/photo-2-tablet@2x.jpg 2x"/>
             <img class="gallery-photo__image" src="img/photo-2-mobile.jpg" width="280" height="280" srcset="img/photo-2-mobile@2x.jpg 2x" alt="Вид на улицу города Седона, здание с флагами, деревья и горы на заднем плане"/>
           </picture>
           <div class="gallery-photo__data">
@@ -114,8 +120,11 @@
         </li>
         <li class="gallery-photo__item">
           <picture>
-            <source class="gallery-photo__image" media="(min-width: 1280px)" srcset="img/photo-3-desktop.jpg", srcset="img/photo-3-desktop@2x.jpg 2x" />
-            <source class="gallery-photo__image" media="(min-width: 768px)" srcset="img/photo-3-tablet.jpg", srcset="img/photo-3-tablet@2x.jpg 2x" />
+            <source class="gallery-photo__image--1280-2x" type="image/webp" media="(min-width: 1280px)" srcset="img/photo-3-desktop.webp, img/photo-3-desktop@2x.webp 2x"/>
+            <source class="gallery-photo__image--768-2x" type="image/webp" media="(min-width: 768px)" srcset="img/photo-3-tablet.webp, img/photo-3-tablet@2x.webp 2x"/>
+            <source class="gallery-photo__image--320-2x" type="image/webp" srcset="img/photo-3-mobile.webp, img/photo-3-mobile@2x.webp 2x"/>
+            <source class="gallery-photo__image--1280" media="(min-width: 1280px)" srcset="img/photo-3-desktop.jpg", srcset="img/photo-3-desktop@2x.jpg 2x" />
+            <source class="gallery-photo__image--768" media="(min-width: 768px)" srcset="img/photo-3-tablet.jpg", srcset="img/photo-3-tablet@2x.jpg 2x" />
             <img class="gallery-photo__image" src="img/photo-3-mobile.jpg" width="280" height="280" srcset="img/photo-3-mobile@2x.jpg 2x" alt="Вид на улицу города Седона, здание с флагами, деревья и горы на заднем плане" />
           </picture>
           <div class="gallery-photo__data">
@@ -138,8 +147,11 @@
         </li>
         <li class="gallery-photo__item">
           <picture>
-            <source class="gallery-photo__image" media="(min-width: 1280px)" srcset="img/photo-4-desktop.jpg", srcset="img/photo-4-desktop@2x.jpg 2x" />
-            <source class="gallery-photo__image" media="(min-width: 768px)" srcset="img/photo-4-tablet.jpg", srcset="img/photo-4-tablet@2x.jpg 2x" />
+            <source class="gallery-photo__image--1280-2x" type="image/webp" media="(min-width: 1280px)" srcset="img/photo-4-desktop.webp, img/photo-4-desktop@2x.webp 2x"/>
+            <source class="gallery-photo__image--768-2x" type="image/webp" media="(min-width: 768px)" srcset="img/photo-4-tablet.webp, img/photo-4-tablet@2x.webp 2x"/>
+            <source class="gallery-photo__image--320-2x" type="image/webp" srcset="img/photo-4-mobile.webp, img/photo-4-mobile@2x.webp 2x"/>
+            <source class="gallery-photo__image--1280" media="(min-width: 1280px)" srcset="img/photo-4-desktop.jpg", srcset="img/photo-4-desktop@2x.jpg 2x" />
+            <source class="gallery-photo__image--768" media="(min-width: 768px)" srcset="img/photo-4-tablet.jpg", srcset="img/photo-4-tablet@2x.jpg 2x" />
             <img class="gallery-photo__image" src="img/photo-4-mobile.jpg" width="280" height="280" srcset="img/photo-4-mobile@2x.jpg 2x" alt="Вид на улицу города Седона, здание с флагами, деревья и горы на заднем плане" />
           </picture>
           <div class="gallery-photo__data">
@@ -164,18 +176,21 @@
     </section>
     <section class="video-block">
       <div class="video-block__wrapper">
-        <h2 class="video-block__title title--large">Все еще сомневаетесь?</h2>
+        <h2 class="video-block__title title__large">Все еще сомневаетесь?</h2>
         <p class="video-block__description description">Смотрите видеопрезентацию и скорее за билетами пока они не подорожали в очередной раз!</p>
       </div>
       <div class="video-block__video">
-        <button class="video-block__play">
-          <svg class="video-block__triangle" width="48" height="54">
+        <button class="video-block__play" type="button">
+          <svg class="video-block__triangle" width="48" height="54" alt="Запуск видео">
             <polygon points="0,0 0,54 48,27"/>
           </svg>
         </button>
         <picture>
-          <source class="gallery-photo__video" media="(min-width: 1280px)" srcset="img/video-desktop.jpg", srcset="img/video-desktop@2x.jpg 2x"/>
-          <source class="gallery-photo__video" media="(min-width: 768px)" srcset="img/video-tablet.jpg", srcset="img/video-tablet@2x.jpg 2x" />
+          <source class="gallery-photo__video--1280-2x" type="image/webp" media="(min-width: 1280px)" srcset="img/video-desktop.webp, img/video-desktop@2x.webp 2x"/>
+          <source class="gallery-photo__video--768-2x" type="image/webp" media="(min-width: 768px)" srcset="img/video-tablet.webp, img/video-tablet@2x.webp 2x"/>
+          <source class="gallery-photo__video--320-2x" type="image/webp" srcset="img/video-mobile.webp, img/video-mobile@2x.webp 2x"/>
+          <source class="gallery-photo__video--1280" media="(min-width: 1280px)" srcset="img/video-desktop.jpg", srcset="img/video-desktop@2x.jpg 2x"/>
+          <source class="gallery-photo__video--768" media="(min-width: 768px)" srcset="img/video-tablet.jpg", srcset="img/video-tablet@2x.jpg 2x" />
           <img class="gallery-photo__video" src="img/video-mobile.jpg" width="280" height="177" srcset="img/video-mobile@2x.jpg 2x" alt="Вид на улицу города Седона, здание с флагами, деревья и горы на заднем плане" />
         </picture>
         <p class="visually-hidden">Браузер не может отобразить данное видео. Вы можете посмотреть его <a href="#">по ссылке.</a></p>
@@ -192,7 +207,7 @@
         <h2 class="visually-hidden">Социальные сети</h2>
         <ul class="social-network__list">
           <li class="social-network__item social-network__item--vk">
-            <a class="social-network__link">
+            <a class="social-network__link" href="#">
               <svg class="social-network__icon" width="24" height="14">
                 <use xlink:href="img/sprite.svg#icon-vk"></use>
               </svg>
@@ -200,7 +215,7 @@
             </a>
           </li>
           <li class="social-network__item social-network__item--telegram">
-            <a class="social-network__link">
+            <a class="social-network__link" href="#">
               <svg class="social-network__icon" width="22" height="18">
                 <use xlink:href="img/sprite.svg#icon-telegram"></use>
               </svg>
@@ -208,7 +223,7 @@
             </a>
           </li>
           <li class="social-network__item social-network__item--youtube">
-            <a class="social-network__link">
+            <a class="social-network__link" href="#">
               <svg class="social-network__icon" width="20" height="14">
                 <use xlink:href="img/sprite.svg#icon-youtube"></use>
               </svg>
