--- a/source/index.html
+++ b/source/index.html
@@ -80,7 +80,7 @@
           <p class="description description--with-img">Седона не атракциаон для туристов, там течет своя жизнь</p>
         </li>
         <li class="advantages__item advantages__item--img">
-          <picture>
+          <picture class="advantages__picture">
             <source class="advantages__image" type="image/webp" media="(min-width: 1280px)" srcset="img/photo-city-desktop.webp, img/photo-city-desktop@2x.webp 2x"/>
             <source class="advantages__image" type="image/webp" media="(min-width: 768px)" srcset="img/photo-city-tablet.webp, img/photo-city-tablet@2x.webp 2x"/>
             <source class="advantages__image" type="image/webp" srcset="img/photo-city-mobile.webp, img/photo-city-mobile@2x.webp 2x"/>
@@ -116,7 +116,7 @@
           <p class="description description--with-img">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
         </li>
         <li class="advantages__item advantages__item--img">
-          <picture>
+          <picture class="advantages__picture">
             <source class="advantages__image" type="image/webp" media="(min-width: 1280px)" srcset="img/photo-bridge-desktop.webp, img/photo-bridge-desktop@2x.webp 2x"/>
             <source class="advantages__image" type="image/webp" media="(min-width: 768px)" srcset="img/photo-bridge-tablet.webp, img/photo-bridge-tablet@2x.webp 2x"/>
             <source class="advantages__image" type="image/webp" srcset="img/photo-bridge-mobile.webp, img/photo-bridge-mobile@2x.webp 2x"/>
@@ -126,8 +126,8 @@
           </picture>
         </li>
         <li class="advantages__item">
-          <ul class="advantages__list--gray">
-            <li class="advantages__item advantages__item--gray">
+          <ul class="advantages__list--number">
+            <li class="advantages__item advantages__item--number">
               <h3 class="title">Небольшая площадь</h3>
               <p class="advantages__number">— №3 —</p>
               <p class="description description--back-gray">
@@ -135,7 +135,7 @@
                 очень близко
               </p>
             </li>
-            <li class="advantages__item advantages__item--gray">
+            <li class="advantages__item advantages__item--number">
               <h3 class="title">Красивая дорога</h3>
               <p class="advantages__number">— №4 —</p>
               <p class="description description--back-gray">
@@ -143,7 +143,7 @@
                 совсем не скучно!
               </p>
             </li>
-            <li class="advantages__item advantages__item--gray">
+            <li class="advantages__item advantages__item--number">
               <h3 class="title">Мало туристов</h3>
               <p class="advantages__number">— №5 —</p>
               <p class="description description--back-gray">
@@ -158,8 +158,8 @@
     <section class="call-to-action">
       <div class="call-to-action__wrapper">
         <h2 class="visually-hidden">Поиск гостиниц</h2>
-        <p class="call-to-action__title title--large">Заинтересовались?</p>
-        <p class="call-to-action__description description description--margin">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <p class="call-to-action__title title__large">Заинтересовались?</p>
+        <p class="call-to-action__description description description__margin">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a class="call-to-action__button button-primary" href="#" target="_blank">Найти гостиницу</a>
       </div>
       <div class="contact-map">
@@ -181,7 +181,7 @@
         <h2 class="visually-hidden">Социальные сети</h2>
         <ul class="social-network__list">
           <li class="social-network__item social-network__item--vk">
-            <a class="social-network__link">
+            <a class="social-network__link" href="#">
               <svg class="social-network__icon" width="24" height="14">
                 <use xlink:href="img/sprite.svg#icon-vk"></use>
               </svg>
@@ -189,7 +189,7 @@
             </a>
           </li>
           <li class="social-network__item social-network__item--telegram">
-            <a class="social-network__link">
+            <a class="social-network__link" href="#">
               <svg class="social-network__icon" width="22" height="18">
                 <use xlink:href="img/sprite.svg#icon-telegram"></use>
               </svg>
@@ -197,7 +197,7 @@
             </a>
           </li>
           <li class="social-network__item social-network__item--youtube">
-            <a class="social-network__link">
+            <a class="social-network__link" href="#">
               <svg class="social-network__icon" width="20" height="14">
                 <use xlink:href="img/sprite.svg#icon-youtube"></use>
               </svg>
