--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,9 @@
           <use xlink:href="img/sprite.svg#main-logo"></use>
         </svg>
       </a>
-      <input class="main-nav__toogle" type="checkbox" name="menu" />
+      <button class="main-nav__toogle main-nav__hamburger-lines" type="button">
+        <span class="visually-hidden">отрыть меню</span>
+      </button>
       <div class="main-nav__hamburger-lines">
         <span class="line line1"></span>
         <span class="line line2"></span>
@@ -53,7 +55,7 @@
       <div class="hero-block__logo">
         <picture>
           <source media="(min-width: 768px)" srcset="img/text-index.svg" width="461" height="350" />
-          <img src="img/text-index.svg" width="282" height="214" />
+          <img src="img/text-index.svg" width="282" height="214" alt="Добро пожаловать в Седону!"/>
         </picture>
       </div>
       <div class="hero-block__img"></div>
@@ -84,8 +86,8 @@
             <source class="advantages__image" type="image/webp" media="(min-width: 1280px)" srcset="img/photo-city-desktop.webp, img/photo-city-desktop@2x.webp 2x"/>
             <source class="advantages__image" type="image/webp" media="(min-width: 768px)" srcset="img/photo-city-tablet.webp, img/photo-city-tablet@2x.webp 2x"/>
             <source class="advantages__image" type="image/webp" srcset="img/photo-city-mobile.webp, img/photo-city-mobile@2x.webp 2x"/>
-            <source class="advantages__image" media="(min-width: 1280px)" srcset="img/photo-city-desktop.jpg", srcset="img/photo-city-desktop@2x.jpg 2x"/>
-            <source class="advantages__image" media="(min-width: 768px)" srcset="img/photo-city-tablet.jpg", srcset="img/photo-city-tablet@2x.jpg 2x"/>
+            <source class="advantages__image" media="(min-width: 1280px)" srcset="img/photo-city-desktop.jpg, img/photo-city-desktop@2x.jpg 2x"/>
+            <source class="advantages__image" media="(min-width: 768px)" srcset="img/photo-city-tablet.jpg, img/photo-city-tablet@2x.jpg 2x"/>
             <img class="advantages__image" src="img/photo-city-mobile.jpg" width="520" height="260" srcset="img/photo-city-mobile@2x.jpg 2x" alt="Вид на улицу города Седона, здание с флагами, деревья и горы на заднем плане" />
           </picture>
         </li>
@@ -120,8 +122,8 @@
             <source class="advantages__image" type="image/webp" media="(min-width: 1280px)" srcset="img/photo-bridge-desktop.webp, img/photo-bridge-desktop@2x.webp 2x"/>
             <source class="advantages__image" type="image/webp" media="(min-width: 768px)" srcset="img/photo-bridge-tablet.webp, img/photo-bridge-tablet@2x.webp 2x"/>
             <source class="advantages__image" type="image/webp" srcset="img/photo-bridge-mobile.webp, img/photo-bridge-mobile@2x.webp 2x"/>
-            <source class="advantages__image" media="(min-width: 1280px)" srcset="img/photo-bridge-desktop.jpg", srcset="img/photo-bridge-desktop@2x.jpg 2x"/>
-            <source class="advantages__image" media="(min-width: 768px)" srcset="img/photo-bridge-tablet.jpg", srcset="img/photo-bridge-tablet@2x.jpg 2x"/>
+            <source class="advantages__image" media="(min-width: 1280px)" srcset="img/photo-bridge-desktop.jpg, img/photo-bridge-desktop@2x.jpg 2x"/>
+            <source class="advantages__image" media="(min-width: 768px)" srcset="img/photo-bridge-tablet.jpg, img/photo-bridge-tablet@2x.jpg 2x"/>
             <img class="advantages__image" src="img/photo-bridge-mobile.jpg" width="520" height="260" srcset="img/photo-bridge-mobile@2x.jpg 2x" alt="Вид на каньон Мост дьявола, каменный выступ и зеленую долину"/>
           </picture>
         </li>
