--- a/source/form.html
+++ b/source/form.html
@@ -127,10 +127,7 @@
           <legend class="visually-hidden">Посещенные достопримечательности</legend>
           <div class="form-feedback__title-block">
             <div class="separator-horizont"></div>
-            <h3 class="title title--form-feedback form-feedback__title">
-              Посещенные<br/>
-              достопримечательности:
-            </h3>
+            <h3 class="title title--form-feedback form-feedback__title">Посещенные<br> достопримечательности:</h3>
             <div class="separator-horizont"></div>
           </div>
           <ul class="form-feedback__list form-feedback__list--check">
