--- a/source/index.html
+++ b/source/index.html
@@ -16,9 +16,7 @@
           <use xlink:href="img/sprite.svg#main-logo"></use>
         </svg>
       </a>
-      <button class="main-nav__toogle main-nav__hamburger-lines" type="button">
-        <span class="visually-hidden">отрыть меню</span>
-      </button>
+      <input class="main-nav__toogle" type="checkbox" name="menu"/>
       <div class="main-nav__hamburger-lines">
         <span class="line line1"></span>
         <span class="line line2"></span>
@@ -149,7 +147,7 @@
               <h3 class="title">Мало туристов</h3>
               <p class="advantages__number">— №5 —</p>
               <p class="description description--back-gray">
-                Большинство едет в Гранд Каньон<br />
+                Большинство едет в Гранд Каньон<br/>
                 и толпится там
               </p>
             </li>
